@@ -1,70 +1,101 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"      "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 <head>
-  <meta content="text/html; charset=iso-8859-1"
- http-equiv="Content-Type">
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <title>Qtstalker: Table of Contents</title>
-  <meta content="amaya 6.1, see http://www.w3.org/Amaya/"
- name="generator">
+  <meta name="generator" content="Amaya 9.53, see http://www.w3.org/Amaya/">
 </head>
+
 <body>
-<h2><u>Qtstalker: Table of Contents</u></h2>
-<h2> </h2>
-<h3><a href="intro.html">Introduction</a><span
- style="color: rgb(0, 0, 0); background-color: rgb(250, 250, 250);"></span></h3>
-<h3><a href="install.html">Installation</a></h3>
-<h3><a href="quick.html">Getting Started: A quick howto</a></h3>
-<h3>Getting to know Qtstalker</h3>
-<ol>
-  <li><a href="main.html">Main Window</a></li>
-  <li><a href="title.html">Title Bar</a></li>
-  <li><a href="workwithcharts.html">Chart Panel<br>
-    </a></li>
-  <li><a href="workwithgroups.html">Group Panel<br>
-    </a></li>
-  <li><a href="workwithmainindicators.html">Indicator Panel<br>
-    </a></li>
-  <li><a href="workwithportfolios.html">Portfolio Panel<br>
-    </a></li>
-  <li><a href="workwithbacktest.html">Backtest Panel</a></li>
-  <li><a href="workwithscanner.html">Scanner Panel</a><br>
+<h1><u>The Qtstalker Handbook</u></h1>
+
+<p><a href="changelog.html">Version 0.34</a> </p>
+
+<h2>Table of Contents</h2>
+<ol type="A">
+  <li><a href="intro.html">Introduction</a></li>
+  <li><a href="faq.html">Frequently Asked Questions</a></li>
+  <li><a href="install.html">Installation</a></li>
+  <li><a href="quick.html">Getting Started: A quick how-to</a></li>
+  <li><a href="main.html">Main Window</a> 
+    <ol style="list-style-type: decimal;">
+      <li><a href="title.html">Title Bar</a></li>
+      <li>Menu bar</li>
+      <li><a href="toolbars.html">Toolbar</a> 
+        <ul>
+          <li><a href="toolbars.html">Quit Qtstalker</a></li>
+          <li><a href="preferences.html">Preferences</a></li>
+          <li><a href="toolbars.html">Tab Functions Toggle</a></li>
+          <li><a href="toolbars.html">Chart Grid</a></li>
+          <li><a href="toolbars.html">Scale to Screen</a></li>
+          <li><a href="toolbars.html">Crosshairs</a></li>
+          <li><a href="toolbars.html">Paper Trade Mode</a></li>
+          <li><a href="toolbars.html">Toggle Draw mode</a></li>
+          <li><a href="newindicator.html">New Indicator</a></li>
+          <li><a href="datawindow.html">Data Window</a></li>
+          <li><a href="quotes.html">Quotes</a></li>
+          <li><a href="toolbars.html">Help</a></li>
+          <li><a href="toolbars.html">Compression</a></li>
+          <li><a href="toolbars.html">Bar Spacing</a></li>
+          <li><a href="toolbars.html">Bar Spacing Quick Change</a> </li>
+          <li><a href="toolbars.html">Bars</a></li>
+          <li><a href="toolbars.html">Chart Slider</a></li>
+        </ul>
+      </li>
+      <li>Button panel to elementary parts of Qtstalker 
+        <ul>
+          <li><a href="workwithcharts.html">Chart Panel</a></li>
+          <li><a href="workwithgroups.html">Group Panel</a></li>
+          <li><a href="workwithmainindicators.html">Indicator Panel</a></li>
+          <li><a href="workwithportfolios.html">Portfolio Panel</a></li>
+          <li><a href="workwithbacktest.html">Back Test Panel</a></li>
+          <li><a href="workwithscanner.html">Scanner Panel</a></li>
+        </ul>
+      </li>
+      <li><a href="mainchart.html">Chart Area<br>
+        </a> 
+        <ul>
+          <li><a href="chartobjects.html">Chart Objects</a></li>
+          <li><a href="printing.html">Printing</a></li>
+        </ul>
+      </li>
+      <li><a href="datapanel.html">Data Panel</a></li>
+      <li><a href="statusbar.html">Status Bar</a></li>
+    </ol>
+    <br>
   </li>
-  <li>Toolbar</li>
-  <ol>
-    <li><a href="toolbars.html">Tab Functions Toggle</a></li>
-    <li><a href="toolbars.html">Chart Grid</a></li>
-    <li><a href="toolbars.html">Scale to Screen</a></li>
-    <li><a href="newindicator.html">New Indicator</a></li>
-    <li><a href="datawindow.html">Data Window</a></li>
-    <li><a href="quotes.html">Quotes</a></li>
-    <li><a href="toolbars.html">Help</a><br>
-    </li>
-    <li><a href="toolbars.html">Compression</a></li>
-    <li><a href="toolbars.html">Bar Spacing</a></li>
-    <li><a href="toolbars.html">Bars</a></li>
-    <li><a href="toolbars.html">Chart Range</a></li>
-    <li><a href="toolbars.html">Crosshairs</a></li>
-    <li><a href="toolbars.html">Paper Trade Mode</a><br>
-    </li>
-  </ol>
-  <li><a href="preferences.html">Preferences</a></li>
-  <li><a href="mainchart.html">Chart Area</a></li>
-  <li><a href="datapanel.html">Data Panel</a></li>
-  <li><a href="statusbar.html">Status Bar</a></li>
-  <li><a href="chartobjects.html">Chart Objects</a></li>
-  <li><a href="backtester.html">Back Tester</a></li>
-  <ol>
-    <li><a href="backtesterrules.html">Rules</a></li>
-    <li><a href="backtesterstops.html">Stops</a></li>
-    <li><a href="backtestertesting.html">Testing</a></li>
-    <li><a href="backtesterreports.html">Reports</a></li>
-    <li><a href="backtesterchart.html">Charts</a><br>
-    </li>
-  </ol>
-  <li><a href="portfolios.html">Portfolios</a></li>
-  <li><a href="printing.html">Printing</a></li>
-  <li><a href="dev.html">Using development versions and contributing</a></li>
+  <li>Additional program parts 
+    <ol>
+      <li><a href="backtester.html">Back Tester</a> 
+        <ul>
+          <li><a href="backtesterrules.html">Rules</a></li>
+          <li><a href="backtesterstops.html">Stops</a></li>
+          <li><a href="backtestertesting.html">Testing</a></li>
+          <li><a href="backtesterreports.html">Reports</a></li>
+          <li><a href="backtesterchart.html">Charts</a></li>
+        </ul>
+      </li>
+      <li><a href="portfolios.html">Portfolios</a></li>
+    </ol>
+    <br>
+  </li>
+  <li><a href="cus.html">The power of CUS</a> 
+    <ol>
+      <li><a href="cus.html#rulesyntax">Rule Syntax</a></li>
+      <li><a href="cus.html#reservedwords">Reserved Words</a></li>
+      <li><a href="indicatorreference.html">Indicator Reference</a></li>
+    </ol>
+    <br>
+  </li>
+  <li><a href="dev.html">Using development versions and contributing</a><br>
+
+    <ol>
+      <li>Using CVS</li>
+      <li>Contributing patches to the project</li>
+    </ol>
+  </li>
 </ol>
+
 <h3>Chart DB Reference</h3>
 <ol>
   <li><a href="cc.html">CC</a></li>
@@ -73,14 +104,15 @@
   <li><a href="spread.html">Spread</a></li>
   <li><a href="stocksplugin.html">Stocks</a></li>
 </ol>
+
 <h3>Quote Reference</h3>
 <ol>
   <li><a href="cme.html">CME</a></li>
   <li><a href="csv.html">CSV</a></li>
   <li><a href="nybot.html">NYBOT</a></li>
-  <li><a href="qtstalker.html">QtstalkerFormat</a></li>
   <li><a href="yahoo.html">Yahoo</a></li>
 </ol>
+
 <h3>Chart Object Reference</h3>
 <ol>
   <li><a href="buyarrow.html">BuyArrow</a></li>
@@ -92,6 +124,7 @@
   <li><a href="verticalline.html">VerticalLine</a></li>
   <li><a href="cycle.html">Cycle</a></li>
 </ol>
+
 <h3>Indicator Reference</h3>
 <ol>
   <li><a href="bars.html">Bars - BARS<br>
@@ -101,58 +134,57 @@
   <li><a href="sz.html">Elder's Safezone Stop - SZ</a></li>
   <li><a href="fi.html">Force Index - FI</a></li>
   <li><a href="lms.html">Least Mean Square Predictor - LMS</a></li>
-  <li><a href="lowpass.html">Lowpass FIlter - LOWPASS</a></li>
+  <li><a href="lowpass.html">Lowpass filter - LOWPASS</a></li>
   <li><a href="pp.html">Pivot Point - PP</a></li>
   <li><a href="sinwav.html">Sine Wave - SINWAV</a></li>
   <li><a href="symbol.html">Symbol - SYMBOL</a></li>
-  <li><a href="talib.html">TA LIBRARY - TALIB</a></li>
-  <ol>
-    <li>Stochastics</li>
-    <li>RSI</li>
-    <li>MACD</li>
-    <li>etc. Over 125 popular indicators are to be found here.<br>
-    </li>
-  </ol>
+  <li><a href="talib.html">TA LIBRARY - TALIB</a> 
+    <ol>
+      <li>Stochastic</li>
+      <li>RSI</li>
+      <li>MACD</li>
+      <li>etc. Over 125 popular indicators are to be found here.<br>
+      </li>
+    </ol>
+  </li>
   <li><a href="uo.html">Ultimate Oscillator - UO</a></li>
-  <li><a href="util.html">Utilities - UTIL</a></li>
-  <ol>
-    <li>Accumulate - ACCUM</li>
-    <li>Normalize - Normal</li>
-    <li>Addition - ADD</li>
-    <li>Division - DIV</li>
-    <li>Multiplication - MUL</li>
-    <li>Subtraction - SUB</li>
-    <li>Compare - COMP</li>
-    <li>Counter - COUNTER</li>
-    <li>Reference - REF</li>
-    <li>Performance - PER</li>
-    <li>Color - COLOR</li>
-    <li>Higher - Higher</li>
-    <li>Lower - Lower<br>
-    </li>
-  </ol>
+  <li><a href="util.html">Utilities - UTIL</a> 
+    <ol>
+      <li>Accumulate - ACCUM</li>
+      <li>Normalize - Normal</li>
+      <li>Addition - ADD</li>
+      <li>Division - DIV</li>
+      <li>Multiplication - MUL</li>
+      <li>Subtraction - SUB</li>
+      <li>Compare - COMP</li>
+      <li>Counter - COUNTER</li>
+      <li>Reference - REF</li>
+      <li>Performance - PER</li>
+      <li>Color - COLOR</li>
+      <li>Higher - Higher</li>
+      <li>Lower - Lower<br>
+      </li>
+    </ol>
+  </li>
   <li><a href="vfi.html">VFI - VFI</a></li>
   <li><a href="vidya.html">Variable Index Dynamic Average - VIDYA</a></li>
-  <li><a href="vol.html">Volume - VOL</a></li>
-  <ol>
-    <li>Volume - VOL</li>
-    <li>Negative Volume Index - NVI</li>
-    <li>Positive Volume Index - PVI</li>
-    <li>Positive Volume Trend - PVT</li>
-  </ol>
-  <li><a href="vola.html">Volatility - VOLA</a></li>
-  <ol>
-    <li>Chaikin's Volatility - CV</li>
-    <li>Volatility Ratio - VOLR</li>
-  </ol>
+  <li><a href="vol.html">Volume - VOL</a> 
+    <ol>
+      <li>Volume - VOL</li>
+      <li>Negative Volume Index - NVI</li>
+      <li>Positive Volume Index - PVI</li>
+      <li>Positive Volume Trend - PVT</li>
+    </ol>
+  </li>
+  <li><a href="vola.html">Volatility - VOLA</a> 
+    <ol>
+      <li>Chaikin's Volatility - CV</li>
+      <li>Volatility Ratio - VOLR</li>
+    </ol>
+  </li>
 </ol>
-<h3><br>
-</h3>
-<h3><a href="plugintut.html">Indicator Plugin Howto</a></h3>
-<h3><a href="faq.html">Frequently Asked Questions</a></h3>
 <br>
-<a href="intro.html" target="_self"><img src="next.png" alt="Next"
- border="0" height="32" width="32"></a><a href="toc.html"><img
- src="home.png" alt="Home" border="0" height="32" width="32"></a>
-</body>
+<p><a href="changelog.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
+<a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a></p>
+		</body>
 </html>
