@@ -1,82 +1,126 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 <head>
-  <meta content="text/html; charset=iso-8859-1"
- http-equiv="Content-Type">
+  <meta http-equiv="content-type"
+ content="text/html; charset=iso-8859-1">
   <title>Qtstalker: Quote Plugin - Yahoo</title>
-  <meta content="amaya 6.1, see http://www.w3.org/Amaya/"
- name="generator">
+  <meta name="generator"
+ content="Amaya 9.53, see http://www.w3.org/Amaya/">
 </head>
 <body>
-<h2><u>Yahoo Plugin</u></h2>
-<h3>Description:</h3>
-<p>Historical and 10 - 20 minute delayed quotes from all yahoo
-supported exchanges are available
-with this plugin.<br>
-</p>
-<h4><br>
-</h4>
-<h4>Adjustments:</h4>
-Yahoo provides an Adjusted Close column in its data,
-scaling prior closing prices to the most recent price based on stock
-splits and dividends. For example, if a 2-for-1 split occurs halfway
-through the data, the Adjusted Close price from before the split will
-be half of the Close price. If the Adjustments option is checked, the
-plugin will calculate the factor between the Close price and the
-Adjusted Close price and apply it to Open, Close, High, Low, and
-Volume. It divides the prices and multiplies the volume, so in any
-case Close x Volume is the same as before the conversion. This allows
-you to display continuous graphs and analyze the movement of an issue
-without large jumps due to stock splits, although the caveat is that
-absolute prices are a factor different from what occurred on the
-exchange that day. Having said that, factoring for historical events
-in this manner is a common approach for visually graphing stock
-prices.<br>
-<br>
-<h3>Input Parameters:</h3>
+<h2><u>Yahoo Plugin</u> </h2>
+<h3>Description </h3>
+<p>Yahoo provides historical and 10 - 20 minute delayed quotes for
+free. All
+yahoo supported exchanges are available with this plugin. </p>
+<p><img alt="" src="yahooplugin.png"> </p>
+<h3>Input Parameters </h3>
+<h4>Method </h4>
+<p>The type of download quote data you want </p>
 <ul>
-  <li>Method - The type of download quote data you want:<br>
+  <li>History - Update history using a specific date range. <br>
   </li>
-  <ul>
-    <li>History - Update history using a specific date range.<br>
-    </li>
-    <li>Auto History - Updates to the most recent history.<br>
-    </li>
-    <li>Quote - Updates the most recent intraday delayed quote.</li>
-    <li>Fundamental - Updates charts with yahoo fundmental data.<br>
-    </li>
-  </ul>
-  <li>End Date - The most recent date to include for update. Used only
-for History method.<br>
+  <li>Auto History - Updates to the most recent history. <br>
   </li>
-  <li>Start Date - The most distant date to include for update. Used
-only for History method.</li>
-  <li>Error Retry - The number of attempts to make if an error
-downloading the symbol occurs.</li>
-  <li>Timeout - The number of seconds to wait while downloading a
-symbol before moving on to the next symbol in the list.</li>
-  <li>Adjustment - Propagate the Close/Adjusted Close factor to all
-price columns (i.e. adjust for stock splits and dividends).</li>
-  <li>All Symbols - If checked, all symbols will be selected.
-Unchecked, specific symbols can be selected by using the file selector.</li>
+  <li>Quote - Updates the most recent intra-day delayed quote. </li>
+  <li>Fundamental - Updates charts with yahoo fundamental data. <br>
+  </li>
 </ul>
-<img alt="" src="yahoo1.png" style="width: 281px; height: 363px;"><br>
+<h4>Start Date </h4>
+<p>The most distant date to include for update. Used only for History
+method.
+</p>
+<h4>End Date </h4>
+<p>The most recent date to include for update. Used only for History
+method.
+</p>
+<h4>Adjustment </h4>
+<p>Propagate the Close/Adjusted Close factor to all price columns (i.e.
+adjust for stock splits and dividends) more info <a
+ href="#adjustmentdetail">below</a> </p>
+<h4>All Symbols </h4>
+<p>If checked, all symbols will be selected. Unchecked, specific
+symbols can
+be selected by using the file selector. </p>
+<h4>Error Retry </h4>
+<p>The number of attempts to make if an error downloading the symbol
+occurs.
+</p>
+<h4>Timeout </h4>
+<p>The number of seconds to wait while downloading a symbol before
+moving on
+to the next symbol in the list. </p>
 <p><br>
-Pressing the "New Symbol" button will bring up the following dialog.</p>
-<p><img style="width: 408px; height: 126px;" alt="" src="yahoo2.png"><br>
 </p>
-<p>Here we will be adding MSFT, IBM, RHAT to our database. Leave a
-space between the symbols.<br>
-</p>
+<h3>Add new stocks to the Qtstalker database </h3>
+<p>Pressing the "New Symbol" button&nbsp;<img alt=""
+ src="../pics/newchart.xpm"><img alt="" src="newchart.png"
+ style="width: 22px; height: 22px;"> will bring up
+the following dialog. </p>
+<p><img src="yahoonewsymbols.png"> </p>
+<p>Here we will be adding RHT, AAPL and IBM to our database. Leave a
+space
+between the symbols. </p>
 <p>NOTE: You only have to create the symbols once and not every time
-you want to download quotes.<br>
-</p>
+you want
+to download quotes. </p>
+<p>To find out the correct Yahoo symbol name for the stock of your
+desire,
+search the stock at the yahoo finance portal and take a look at the
+upper
+left corner in the displayed chart. US stocks do not have a suffix at
+the end
+like .DE for stocks traded at Xetra or .L for London Stock Exchange. </p>
+<p><img src="yahoosymbolfindout.png"> </p>
 <p><br>
-<a href="qtstalker.html" target="_self"><img src="back.png" alt="Back"
- border="0" height="32" width="32"></a><a href="buyarrow.html"
- target="_self"><img src="next.png" alt="Next" border="0" height="32"
- width="32"></a>
-<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32"
- width="32"></a></p>
+</p>
+<h3>Perform quote download </h3>
+<p>After you have made all adjustments in the GUI press the download
+button
+<img src="download.png"> and the process starts. If an error occur will
+it
+display in the status window. </p>
+<p>If you want to abort the download for any reason, press the cancel
+button
+<img src="canceldownload.png"> which is only available while a download
+is
+in progress. </p>
+<p><br>
+</p>
+<h3><a name="adjustmentdetail">More detailed explanation about the
+adjustment
+option</a> </h3>
+<p>Yahoo provides an Adjusted Close column in its data, scaling prior
+closing
+prices to the most recent price based on stock splits and dividends.
+For
+example, if a 2-for-1 split occurs halfway through the data, the
+Adjusted
+Close price from before the split will be half of the Close price. If
+the
+Adjustments option is checked, the plugin will calculate the factor
+between
+the Close price and the Adjusted Close price and apply it to Open,
+Close,
+High, Low, and Volume. It divides the prices and multiplies the volume,
+so in
+any case Close x Volume is the same as before the conversion. This
+allows you
+to display continuous graphs and analyze the movement of an issue
+without
+large jumps due to stock splits, although the caveat is that absolute
+prices
+are a factor different from what occurred on the exchange that day.
+Having
+said that, factoring for historical events in this manner is a common
+approach for visually graphing stock prices. </p>
+<p><br>
+<br>
+</p>
+<p><a href="nybot.html" target="_self"><img src="back.png" alt="Back"
+ border="0" height="32" width="32"></a>
+<a href="workwithcharts.html" target="_self"><img src="next.png"
+ alt="Next" border="0" height="32" width="32"></a><a href="toc.html"><img
+ src="home.png" alt="Home" border="0" height="32" width="32"></a></p>
 </body>
 </html>
